# mobile-atlas

./: README.md  pico_proxy.py  probe.py  sim.py
mobileatlas/dashboard/: MANIFEST.in  flake.nix  pyproject.toml  requirements.txt
mobileatlas/dashboard/dev/: Dockerfile  Makefile  compose.yml  consent.html  login.html  login.py  migrate.Dockerfile  setup.sh
mobileatlas/dashboard/dev/docker-entrypoint-initdb.d/: setup.sh
mobileatlas/dashboard/dev/hydra/: hydra.yml
mobileatlas/dashboard/src/moat_dash_migrations/: cli.py  migrate.py
mobileatlas/dashboard/src/moat_dash_migrations/migrations/: 00_initial.sql
mobileatlas/dashboard/src/moat_dashboard/: auth.py  cli.py  config.py  db.py  management_db.py  map.py  routes.py  utils.py
mobileatlas/dashboard/src/moat_dashboard/resources/static/css/: index.css  main.css  probe_details.css
mobileatlas/dashboard/src/moat_dashboard/resources/static/js/: probe_status.js  zoom.js
mobileatlas/dashboard/src/moat_dashboard/resources/templates/: base.html  dashboard.html  error.html  error_base.html  icons.html  index.html  nav.html  probe_details.html  probes.html  validation_error.html
mobileatlas/management/: pyproject.toml  requirements.txt
mobileatlas/management/src/moat_management/: config.py  probe_routes.py  routes.py  token_routes.py
mobileatlas/management/src/moat_management/templates/: probes.html  tokens.html
mobileatlas/management/src/moat_management/tunnel_auth/: auth.py  tunnel_interface_routes.py
mobileatlas/probe/: probe_args.py  requirements.txt
mobileatlas/probe/measurement/test/: test_args.py  test_factory.py  test_network_info.py
mobileatlas/probe/tunnel/: modem_tunnel.py
mobileatlas/simprovider/: device_observer.py  sim_provider.py
mobileatlas/simprovider/tunnel/: sim_tunnel.py
mobileatlas/tls-certs/: Makefile  openssl.cnf
mobileatlas/tunnel/src/moatt_clients/: requirements.txt
mobileatlas/tunnel/src/moatt_server/: default.nix  dev-requirements.txt  requirements.txt
mobileatlas/tunnel/src/moatt_server/src/moatt_server/: config.py
mobileatlas/tunnel/src/moatt_server/src/moatt_server/auth_handlers/: moat_management.py
mobileatlas/tunnel/src/moatt_server/src/moatt_server/rest/: auth.py
mobileatlas/tunnel/src/moatt_server/src/moatt_server/tunnel/: cli.py
mobileatlas/tunnel/src/moatt_types/src/moatt_types/: connect.py
mobileatlas/wg-daemon/: requirements.txt
mobileatlas/wg-daemon/src/wg_daemon/: routes.py  wg.py
pico-tunnel/: .gitignore  CMakeLists.txt  README.md  pico_poc.c  protocol.md
pico-tunnel/reader-scripts/: scReader.py  usb.py
pico-tunnel/test/: pico_poc_test.c  pico_poc_test.h
pico-tunnel/util/: util.c  util.h
pico-tunnel/util/iso7816_t0/: class_tables.c  class_tables.h
setup/ab_booting_variant/: README.md  autoboot-update  probe-update  probe-update.service  probe-update.timer
setup/ansible-bootstrap/pi-setup/tasks/: main.yml
setup/systemd/: probe_utilities.py
setup/systemd/mobile-atlas/: mobile-atlas-daemon.py
setup/systemd/wireguard-register/: wireguard-register.py
