[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moat-dashboard"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[project.scripts]
moat-dashboard = "moat_dashboard.cli:run"
moat-dash-migrate = "moat_dash_migrations.cli:run"
